# AI-Powered-Coding-Challenge-with-ClerkAuthentication

./: .gitignore  README.md
backend/: pyproject.toml  reset_quota.py
backend/src/: ai_generator.py  app.py  utils.py
backend/src/database/: db.py  models.py
backend/src/routes/: challenge.py
frontend/: .gitignore
frontend/src/: App.jsx  main.jsx
frontend/src/challenge/: ChallengeGenerator.jsx  MCQChallenge.jsx
frontend/src/history/: HistoryPanel.jsx
frontend/src/layout/: Layout.jsx
