[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "clerk-sdk-python>=0.1.0",
    "fastapi>=0.125.0",
    "openai>=2.16.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "svix>=1.0.0",
    "uvicorn>=0.40.0",
]
